--- a/static/index.html
+++ b/static/index.html
@@ -32,12 +32,12 @@
 
 
   <canvas></canvas>
-  <h1> Dynamic </h1>
+  <h1 class="logotext"> <img class="logo" height="72px" width="72px" src="resources/img/logo.png">ynamic </h1>
 	<form action="/service/route" method="POST" id="uform">
 	  <input title="query" name="url" autocomplete="off" >
 	</form>
   <div class="footer"> 
-    <div class="copyright"> Copyright Nebula Services 2023 </div>
+    <div class="copyright"> © Chromatica Labs 2023 </div>
  </div>  
 
 <button class="js-modal" data-modal="modal-1">Information</button>
